--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <section>
-    <div class="brand"></div>
+    <div class="brand">Brand</div>
   </section>
-  <section></section>
+  <section>Menu</section>
 </nav>
