--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -1,5 +1,5 @@
 @import "_colors";
-@import "utils/_all";
+@import "utils/all";
 
 *,
 *::before,
@@ -12,8 +12,8 @@
 body {
   font-family: "ABeeZee", sans-serif;
   font-family: "Inter", sans-serif;
-  background-color: $background;
-  color: $color;
+  background-color: map-get($dark, 100);
+  color: map-get($dark, 20);
   font-size: $fs-standar;
   font-weight: $fw-standar;
 }
