--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -1,3 +1,12 @@
-<app-sidebar></app-sidebar>
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<main>
+  <section>
+    <!-- <app-sidebar></app-sidebar> -->
+    <app-navbar></app-navbar>
+  </section>
+  <section>
+    <router-outlet></router-outlet>
+  </section>
+  <section>
+    <app-footer></app-footer>
+  </section>
+</main>
