--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -1,7 +1,7 @@
 $dark-gray: #181920;
 $disable: #565666;
 $white-snow: #d7d6e5;
-
+$white: white;
 $background-dark: $dark-gray;
 $color-dark: $white-snow;
 
